<android.support.constraint.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sons_of_interaction.docall.fragment.ProfileFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFF">

    <TextView
        android:id="@+id/nomeField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="78dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="40dp"
        android:text="@string/profiloNome"
        android:textSize="@dimen/fieldTitle"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Nome"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginEnd="34dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:text="TextView"
        android:textSize="@dimen/fieldText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/nomeField" />

    <TextView
        android:id="@+id/cognomeField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:text="@string/profiloCognome"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/fieldTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/Nome" />

    <TextView
        android:id="@+id/Cognome"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginEnd="34dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:text="TextView"
        android:textSize="@dimen/fieldText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/cognomeField" />

    <TextView
        android:id="@+id/CodiceField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="199dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="23dp"
        android:text="@string/profiloCodice"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/fieldTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/CodiceFiscale"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginEnd="34dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:text="TextView"
        android:textSize="@dimen/fieldText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CodiceField" />

    <TextView
        android:id="@+id/DataNascitaField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="194dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="23dp"
        android:text="@string/profiloDataNascita"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/fieldTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CodiceFiscale" />

    <TextView
        android:id="@+id/DataDiNascita"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginEnd="34dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="15dp"
        android:text="TextView"
        android:textSize="@dimen/fieldText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DataNascitaField" />

    <TextView
        android:id="@+id/MedicoField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="201dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="23dp"
        android:text="@string/profiloMedico"
        android:textSize="@dimen/fieldTitle"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DataDiNascita" />

    <TextView
        android:id="@+id/Dottore"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginEnd="34dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="15dp"
        android:text="TextView"
        android:textSize="@dimen/fieldText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MedicoField" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="146dp"
        android:layout_height="148dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

</android.support.constraint.ConstraintLayout>
